Fixed distortion issue + alt front page

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -103,7 +103,7 @@ footer {
 
 
 #collection {
-    display: flex;
+    display: block;
 }
 
 .thumbnail {
@@ -114,6 +114,13 @@ footer {
 .img-full {
     margin: 5px;
     width: 500px;
+}
+
+.img-disp { 
+  margin: 5px ;
+  width: 500px ;
+  margin-left: 25% ;
+
 }
 
 
